assets/css/prose.css
.prose h2,
.prose h3,
.prose h4 {
  @apply relative inline-flex items-baseline font-bold;

  code {
    @apply bg-transparent font-bold text-slate-800;
    @apply before:[content:'`'] after:[content:'`'];
  }
}

.prose h3,
.prose h4 {
  @apply mt-4;
}

.prose h2 a,
.prose h3 a,
.prose h4 a {
  @apply absolute w-full h-full;

  span::before {
    @apply hidden sm:block;
    @apply absolute -ml-5 w-full top-0.5;
    @apply opacity-0 hover:opacity-100 transition-opacity;
    @apply text-lg text-slate-800;
    content: '#';
  }

  &:hover span::before {
    @apply opacity-100;
  }
}

abbr,
.prose abbr {
  @apply cursor-help underline underline-offset-2 decoration-1 decoration-slate-500;
}

.prose ul,
.prose ol {
  @apply mb-6;
}

.prose h4 a span::before {
  @apply top-0 text-base;
}

/* Syntax highlighting */

.prose .shiki {
  @apply mb-8 pl-0;
  @apply border !bg-transparent backdrop-blur-[3px];
  @apply leading-6 font-mono;
  @apply selection:bg-blue-500 selection:text-white;
}

.prose .example-preview {
  > div:first-child {
    @apply flex justify-center py-10 bg-slate-100 rounded-t-md;

    + div {
      @apply bg-white;
    }
  }


  .shiki {
    @apply -mt-1 bg-white border-slate-100 rounded-t-none;
  }
}

.prose .code-frame {
  @apply flex justify-between items-center;
  @apply border rounded-md rounded-b-none backdrop-blur-[3px];
  @apply px-6;
  @apply text-sm;

  span {
    @apply border-b border-indigo-600 inline-block h-full py-3 text-xs -mb-px;
  }
}

.prose .terminal-frame {
  @apply flex justify-between items-center;
  @apply px-6 py-3;
  @apply border rounded-t-md backdrop-blur-[3px];
  @apply text-sm;
}

.prose .code-frame + div .shiki,
.prose .terminal-frame + div .shiki {
  @apply mt-0 py-4;
  @apply border-t-0 rounded-t-none backdrop-blur-[3px];
}

.prose code {
  counter-reset: step;
  counter-increment: step 0;
}

.prose code .line::before {
  @apply sticky left-0;
  @apply inline-block w-4 pl-6 pr-7;
  @apply text-right text-slate-300 bg-white;
  content: counter(step);
  counter-increment: step;
}

.prose .terminal-frame + div code .line:empty::before {
  @apply hidden;
}

.prose .terminal-frame + div code .line:not(:empty)::before {
  content: '$';
  @apply text-base;
}

.animate-spin-fast {
  animation: spin .5s linear infinite;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.completed .ti-cursor {
  @apply hidden !important;
}

.prose .shiki code {
  @apply p-0 bg-transparent;
}

